--- a/stats-service/stats-server/src/main/resources/application.properties
+++ b/stats-service/stats-server/src/main/resources/application.properties
@@ -3,6 +3,11 @@ spring.application.name=stats-server
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.format_sql=true
 
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
+# ????????? ?????? ??? ? ???? ????? (timestamps)
+spring.jackson.serialization.write-dates-as-timestamps=false
+
+
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/stats
 spring.datasource.username=postgres
