--- a/main-service/src/main/resources/application.properties
+++ b/main-service/src/main/resources/application.properties
@@ -1,6 +1,8 @@
+stats-server.url=http://localhost:9090
+
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.format_sql=true
-spring.datasource.url=jdbc:postgresql://localhost:5432/stats
+spring.datasource.url=jdbc:postgresql://localhost:5432/main
 spring.datasource.username=postgres
 spring.datasource.password=admin
 spring.sql.init.mode=always
@@ -11,7 +13,7 @@ logging.level.org.springframework.transaction=INFO
 logging.level.org.springframework.transaction.interceptor=TRACE
 logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
 
-server.port=9090
+server.port=8080
 
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.serialization.write-dates-as-timestamps=false
